# learn_cadcad

./: .gitignore  bd_init.py  bech.py  main.py  pyproject.toml
experiments/: exp1.ipynb  exp2.py  main.ipynb
model/: iter.py  run.py  state_update_blocks.py  state_variables.py  system_parameters.py  utils.py
model/parts/: agent_filters.py  policy_functions.py  state_update_functions.py
