[project]
name = "learn-cadcad"
version = "0.1.0"
description = ""
authors = [
    {name = "BadmintonAdmin",email = "fufilstudio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "radcad (>=0.14.0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
